ADD: add symbol loading and closing add module integration